--- a/scikit learn/changing data types.ipynb
+++ b/scikit learn/changing data types.ipynb
@@ -5,7 +5,7 @@
    "id": "1a85e7b8-9d2a-4b9e-9878-6df2c283acd2",
    "metadata": {},
    "source": [
-    "# Training and testing an Sciket learn model"
+    "# Training and testing an Scikit learn model"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "4ea272a5-dbfc-4b47-826f-66b2e0fd9464",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "8c63e477-840e-4cc5-b55b-b0d112fd4555",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "9           5  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,29 +210,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "4e6d448b-fa2d-462a-ac55-678347c8e5be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "phone_ds['Storage'] = phone_ds['Storage'].str.replace(\"GB\",\"\",regex=False).astype(int)"
+    "# phone_ds['Storage'] = phone_ds['Storage'].str.replace(\"GB\",\"\",regex=False).astype(int) # they are done once"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "dcc89978-977b-478d-b5e1-c49a1058811b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "phone_ds['Memory'] = phone_ds['Memory'].str.replace(\"GB\",\"\",regex=False).astype(int)\n",
-    "# method-2 for the same opeartion\n",
-    "phone_ds['Memory'] = phone_ds['Memory'].str.replace(\"GB\",\"\",regex=False).astype(int)"
+    "# phone_ds['Memory'] = phone_ds['Memory'].str.replace(\"GB\",\"\",regex=False).astype(int) # this is also done"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
+   "id": "b8a4dd16-c241-4ddd-be8e-b485954ebde2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# also convert the network type to integers\n",
+    "phone_ds['Internet Network'] = phone_ds['Internet Network'].str.replace(\"G\",\"\",regex=False)\n",
+    "phone_ds['Internet Network'] = phone_ds['Internet Network'].str.replace(\"LTE\",\"\",regex=False).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "96e04fd4-da1f-4930-807d-aa6d5d04d453",
    "metadata": {},
    "outputs": [
@@ -244,11 +254,12 @@
        "Storage              int64\n",
        "Memory               int64\n",
        "Price (USD)          int64\n",
-       "Internet Network    object\n",
+       "Internet Network     int64\n",
+       "Generation           int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,14 +279,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "437356e8-f8a2-4e13-8e89-8a9bb1a07976",
+   "execution_count": 14,
+   "id": "31ad17aa-cd1a-4947-9dbb-a2b48ab73883",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import the desired model \n",
-    "from sklearn.ensemble import RandomForestRegressor\n"
+    "# LET ME PREPARE THE X AND Y TEST TRAIN DATASETS\n",
+    "X = phone_ds.drop(\"Price (USD)\",axis=1)\n",
+    "Y = phone_ds[\"Price (USD)\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "244cc82e-44f6-451f-ac9c-a5be03ed7ee8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train,x_test,y_train,y_test = train_test_split(X,Y,test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "437356e8-f8a2-4e13-8e89-8a9bb1a07976",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'does not work until you encode and then transform the column having string values into float'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# FIT THE MODEL\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\"\"\"does not work until you encode and then transform the column having string values into float\"\"\"\n",
+    "# RFR = RandomForestRegressor() d\n",
+    "# RFR.fit(x_train,y_train)\n",
+    "# RFR.score(x_test,y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bf95cdae-3b87-4918-88e9-49a12a58c95d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   0\n",
+       "0  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "1  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "2  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "3  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "4  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "5  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "6  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "7  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "8  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "9  <Compressed Sparse Row sparse matrix of dtype ..."
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import the required libraries/packages I will use for encoding and transformation\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "# step1 : select the features you want to encode\n",
+    "encode_features = [\"Phone Name\",\"Manufacturer\"]\n",
+    "\n",
+    "# step 2: make an instance of the oneHotEncoder and transformer class respectively\n",
+    "OneHen = OneHotEncoder()\n",
+    "\n",
+    "# creating the transformer instance with arguments as follows\n",
+    "# 1. one_hot_encode as the transformer name for future use\n",
+    "# 2. the name of the encoder\n",
+    "# 3. name of the features to be encoded and\n",
+    "# and one other arg/parameter is the remainder, which take cares of the remaining features of the dataset\n",
+    "\n",
+    "transformer = ColumnTransformer([(\"one_hot_encode\",OneHen,encode_features)],\n",
+    "                               remainder = \"passthrough\")\n",
+    "\n",
+    "# performing the transform operation on the X data component of the dataset\n",
+    "\n",
+    "transformed_X = transformer.fit_transform(X)\n",
+    "\n",
+    "# turn into a dataframe\n",
+    "pd.DataFrame(transformed_X)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "12029acc-2ba5-4684-9d6f-7e275569b7f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>&lt;Compressed Sparse Row sparse matrix of dtype ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   0\n",
+       "0  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "1  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "2  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "3  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "4  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "5  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "6  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "7  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "8  <Compressed Sparse Row sparse matrix of dtype ...\n",
+       "9  <Compressed Sparse Row sparse matrix of dtype ..."
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbc1dabe-c794-4aae-b2b6-03d9a3c2a365",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
